# journal-app

./: compose.yaml
services/backend/: pyproject.toml
services/backend/migrations/models/: 0_20240220150635_init.py  0_20240226123549_init.py  10_20240222095843_update.py  11_20240222115406_update.py  12_20240222121936_update.py  13_20240222142033_update.py  14_20240222144435_update.py  1_20240221101124_update.py  2_20240221160204_update.py  3_20240221162710_update.py  4_20240222081239_update.py  5_20240222082244_update.py  6_20240222090154_update.py  7_20240222090915_update.py  8_20240222092027_update.py  9_20240222093059_update.py
services/backend/src/: main.py
services/backend/src/core/: config.py  dependencies.py  jwthandler.py  models.py  security.py
services/backend/src/crud/: entries.py  users.py
services/backend/src/routers/: entries.py  users.py
services/backend/src/schemas/: entries.py  users.py
services/frontend/: package-lock.json
services/frontend/src/components/: HelloWorld.vue  NavBar.vue
services/frontend/src/router/: index.js
services/frontend/src/store/: index.js
services/frontend/src/store/modules/: entries.js  users.js
services/frontend/src/views/: DashboardView.vue  HomeView.vue  RegisterView.vue
